feat: responsividade e refatoração

--- a/styles.css
+++ b/styles.css
@@ -6,15 +6,33 @@
     box-sizing: border-box;
 }
 
+:root{
+    --card-color-primary: #F7DD43;
+    --card-title-border-color: #746615;
+    --card-bg-color: #1D1C19;
+    --bg: url(assets/bg-yellow.svg)
+}
+
+body.blue{
+    --card-color-primary: #338AF3;
+    --card-title-border-color: #338AF3;
+    --card-bg-color: #202024;
+    --bg: url(assets/bg-blue.svg)
+}
+
+body.green{
+    --card-color-primary: #047C3F;
+    --card-title-border-color: #047C3F;
+    --card-bg-color: #1A1F1B;
+    --bg: url(assets/bg-green.svg)
+}
+
 ul{
     list-style: none;
 }
 
 body{
-    background-color: #121214;
-    background-image: url(assets/bg.svg);
-    background-position-x: center;
-    background-position-y: -715px;
+    background: #121214 var(--bg) no-repeat top center/cover;
 }
 
 body *{
@@ -23,7 +41,8 @@ body *{
 
 #app{
     width: fit-content;
-    margin: 52px auto;
+    margin: auto;
+    padding-top: 52px;
 }
 
 header{
@@ -40,8 +59,9 @@ header{
 .card{
     padding: 32px 23px;
     text-align: center;
-    background: #1D1C19;
-    border-bottom: 2px solid #F7DD43;
+
+    background: var(--card-bg-color);
+    border-bottom: 2px solid var(--card-color-primary);
     border-radius: 6px;
 }
 
@@ -52,7 +72,7 @@ header{
     align-items: center;
 
     padding: 8px 16px;
-    border: 1px solid #746615;
+    border: 1px solid var(--card-title-border-color);
     border-radius: 6px;
 
     width: fit-content;
@@ -94,4 +114,38 @@ header{
     line-height: 125%;
 
     color: #E1E1E6;
+}
+
+.card h2:hover,
+.card ul li strong:hover,
+.card ul li img:hover{
+    transform: scale(1.1);
+}
+
+.card h2,
+.card ul li strong,
+.card ul li img{
+    transition: transform 0.3s;
+}
+
+.card{
+    animation: appear 3s;
+}
+
+@keyframes appear {
+    0%{
+        transform: translateY(-50px );
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+@media (min-width: 700px){
+    #cards{
+        max-width: 670px;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 }
